--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lsst-sqre/jupyterlab-lsstextensions",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.2",
   "description": "LSST Query functions menu",
   "author": "LSST DM/SQuaRE",
   "main": "lib/index.js",
